# pyclap

./: .gitignore  example.py  pyclap.py  pyproject.toml  vertagus.yaml
.github/: workflow.on-pr-merge.yml  workflow.on-pr.yml
.github/workflows/: manual.publish-pypi.yml  manual.tag-commit.yml  reusable.check-version.yml  reusable.tag-commit.yml  workflow.on-pr-merge.yml  workflow.on-pr.yml
examples/: simple_parser.py
src/pyclap/: parser_tools.py
src/quickparser/: __init__.py  parser_tools.py
test/: test.sh  test_parser.py
