[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclap"
version = "0.1.0"
description = "Create lightweight CLI arg parsers from pydantic models"
authors = [
    { name = "John Raines", email = "johndanielraines@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "pydantic"
]

[tool.optional-dependencies]
dev = ["pytest"]
